--- a/packages/low-router/tsconfig.json
+++ b/packages/low-router/tsconfig.json
@@ -4,7 +4,7 @@
     "target": "esnext",
     "module": "esnext",
     "declaration": true,
-    "outDir": "dist",
+    "outDir": "dist"
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
