--- a/packages/lowrouter/package.json
+++ b/packages/lowrouter/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "@wbe/repo",
-  "version": "0.7.0",
+  "name": "@wbe/lowrouter",
+  "version": "0.1.0",
   "type": "module",
   "files": [
     "dist"
   ],
   "sideEffects": false,
-  "main": "./dist/repo.cjs",
-  "module": "./dist/repo.js",
-  "types": "./dist/repo.d.ts",
+  "main": "./dist/lowrouter.cjs",
+  "module": "./dist/lowrouter.js",
+  "types": "./dist/lowrouter.d.ts",
   "repository": {
     "type": "git",
-    "url": "git://github.com/willybrauner/repo.git"
+    "url": "git://github.com/willybrauner/lowrouter.git"
   },
   "keywords": [
     "repo"
