--- a/package.json
+++ b/package.json
@@ -20,15 +20,16 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.26.1",
+    "@size-limit/esbuild-why": "^9.0.0",
     "@size-limit/preset-small-lib": "^8.2.4",
     "@types/node": "^20.1.0",
+    "jsdom": "^22.1.0",
     "prettier": "^2.8.8",
     "size-limit": "^8.2.4",
     "turbo": "^1.9.9",
     "typescript": "^5.0.4",
     "vite": "^4.3.5",
-    "vitest": "^0.31.0",
-    "jsdom": "^22.1.0"
+    "vitest": "^0.31.0"
   },
   "prettier": {
     "semi": false,
