Update App component

--- a/examples/lowrouter-compose/package.json
+++ b/examples/lowrouter-compose/package.json
@@ -8,13 +8,13 @@
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
-  "devDependencies": {
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5"
-  },
   "dependencies": {
-    "@wbe/compose": "latest",
     "@wbe/interpol": "^0.7.0",
     "@wbe/lowrouter": "latest"
+  },
+  "devDependencies": {
+    "@wbe/debug": "^1.2.0",
+    "typescript": "^5.0.2",
+    "vite": "^4.4.5"
   }
 }
