--- a/examples/lowrouter-compose/package.json
+++ b/examples/lowrouter-compose/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@wbe/debug": "^1.2.0",
+    "gsap": "^3.12.2",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
