--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,22 +21,16 @@ jobs:
         with:
           version: 8
 
-#      - name: Get pnpm store directory
-#        shell: bash
-#        run: |
-#          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
-
-      - name: Install dependencies
-        run: pnpm install
-
       - uses: actions/cache@v3
         name: Setup pnpm cache
         with:
-          path: ~/.pnpm-store
+          path: ${{ steps.pnpm-install.outputs.dest }}
           key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
             ${{ runner.os }}-pnpm-store-
 
+      - name: Install dependencies
+        run: pnpm install
 
   build:
     runs-on: ubuntu-latest
@@ -46,10 +40,8 @@ jobs:
       - name: Restore pnpm cache
         uses: actions/cache@v3
         with:
-          path: ~/.pnpm-store
+          path: ${{ steps.pnpm-install.outputs.dest }}
           key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-      - name: Install pnpm
-        run: npm install -g pnpm
       - name: build
         run: pnpm run build
 
