--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,3 @@
-name: ci
-on: [ push ]
 jobs:
   common:
     runs-on: ubuntu-latest
@@ -26,6 +24,7 @@ jobs:
         shell: bash
         run: |
           echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+          echo "STORE_PATH=$STORE_PATH" >> $GITHUB_ENV  # Export the variable
 
       - uses: actions/cache@v3
         name: Setup pnpm cache
@@ -54,6 +53,7 @@ jobs:
 
       - name: build
         run: pnpm run build
+
 
 #  test:
 #    runs-on: ubuntu-latest
