--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,15 +22,17 @@ jobs:
           version: 8
           run_install: false
 
-      - name: Get pnpm store directory
-        shell: bash
-        run: |
-          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+#      - name: Get pnpm store directory
+#        shell: bash
+#        run: |
+#          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+
+
 
       - uses: actions/cache@v3
         name: Setup pnpm cache
         with:
-          path: ${{ env.STORE_PATH }}
+          path: ~/.pnpm-store
           key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
             ${{ runner.os }}-pnpm-store-
@@ -38,23 +40,31 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: my-artifact
+          path: ~/.pnpm-store
+
   build:
     runs-on: ubuntu-latest
     name: build
     needs: common
     steps:
-      - name: Restore pnpm cache
-        uses: actions/cache@v3
+      - uses: actions/download-artifact@v3
         with:
-          path: ${{ steps.common.outputs.STORE_PATH }}  # Utilize the STORE_PATH output from common job
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          name: my-artifact
+          path: ~/.pnpm-store
+      - name: Display structure of downloaded files
+        run: ls -R
 
-      - name: Debug pnpm cache
-        run: ls -la ${{ steps.common.outputs.STORE_PATH }}
-
+#      - name: Restore pnpm cache
+#        uses: actions/cache@v3
+#        with:
+#          path: ~/.pnpm-store
+#          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
       - name: build
         run: pnpm run build
-
 
 #  test:
 #    runs-on: ubuntu-latest
