--- a/examples/react-nested-routes/package.json
+++ b/examples/react-nested-routes/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@wbe/low-router": "^0.1.0",
+    "history": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
