--- a/examples/compose/package.json
+++ b/examples/compose/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "low-router-compose",
+  "name": "example-low-router-compose",
   "private": true,
   "version": "0.0.0",
   "type": "module",
