--- a/examples/custom-path-to-regexp/package.json
+++ b/examples/custom-path-to-regexp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "custom-path-to-regexp",
+  "name": "example-custom-path-to-regexp",
   "private": true,
   "version": "0.0.0",
   "type": "module",
