--- a/examples/react-nested-routes/package.json
+++ b/examples/react-nested-routes/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-nested-routes",
+  "name": "example-react-nested-routes",
   "private": true,
   "version": "0.0.0",
   "type": "module",
