--- a/packages/low-router/tsconfig.json
+++ b/packages/low-router/tsconfig.json
@@ -4,7 +4,13 @@
     "target": "esnext",
     "module": "esnext",
     "declaration": true,
-    "outDir": "dist"
+    "outDir": "dist",
+
+    /* Linting */
+//    "strict": true,
+//    "noUnusedLocals": false,
+//    "noUnusedParameters": false,
+//    "noFallthroughCasesInSwitch": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
