--- a/packages/low-router/package.json
+++ b/packages/low-router/package.json
@@ -35,5 +35,8 @@
     "tsup": "^6.7.0",
     "typescript": "^5.0.4",
     "vitest": "^0.31.0"
+  },
+  "dependencies": {
+    "@wbe/debug": "^1.2.0"
   }
 }
