feat: create low-router-preact

--- a/package.json
+++ b/package.json
@@ -40,6 +40,11 @@
       "name": "@wbe/low-router",
       "path": "packages/low-router/dist/low-router.js",
       "limit": "2.25 KB"
+    },
+    {
+      "name": "@wbe/low-router-preact",
+      "path": "packages/low-router-preact/dist/low-router-preact.js",
+      "limit": "10 KB"
     }
   ]
 }
