feat: Remove jsx

--- a/packages/low-router-preact/tsconfig.json
+++ b/packages/low-router-preact/tsconfig.json
@@ -6,14 +6,8 @@
     "declaration": true,
     "outDir": "dist",
     "strict": false,
-
-    "jsx": "react",
-    "jsxFactory": "h",
-
-    "paths": {
-      "react": ["./node_modules/preact/compat/"],
-      "react-dom": ["./node_modules/preact/compat/"]
-    }
+    "moduleResolution": "node",
+    "types": ["preact"]
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
