--- a/packages/low-wouter-react/package.json
+++ b/packages/low-wouter-react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@wbe/low-router-preact",
+  "name": "@wbe/low-router-react",
   "author": "Willy Brauner",
   "license": "MIT",
   "version": "0.1.0",
@@ -8,12 +8,12 @@
     "dist"
   ],
   "sideEffects": false,
-  "main": "./dist/low-router-preact.js",
-  "module": "./dist/low-router-preact.js",
-  "types": "./dist/low-router-preact.d.ts",
+  "main": "./dist/low-router-react.js",
+  "module": "./dist/low-router-react.js",
+  "types": "./dist/low-router-react.d.ts",
   "repository": {
     "type": "git",
-    "url": "git://github.com/willybrauner/low-router-preact.git"
+    "url": "git://github.com/willybrauner/low-router-react.git"
   },
   "keywords": [
     "preact",
@@ -32,12 +32,14 @@
     "build:watch": "tsup --watch --sourcemap"
   },
   "dependencies": {
+    "@types/react": "^18.3.5",
     "@wbe/debug": "^1.2.0",
     "@wbe/low-router": "workspace:*",
+    "@wbe/low-router-preact": "workspace:*",
     "@wbe/utils": "^0.1.2"
   },
   "peerDependencies": {
-    "preact": "^10.23.1"
+    "react": "^18.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.16.0",
