--- a/package.json
+++ b/package.json
@@ -14,23 +14,28 @@
     "test:watch": "vitest --reporter verbose",
     "test": "vitest run",
     "size": "size-limit",
+    "reset": "rm -rf dist node_modules package-lock.json pnpm-lock.yaml tsconfig.tsbuildinfo .turbo",
+    "reset:all": "FORCE_COLOR=1 turbo run reset && pnpm reset",
+    "reinstall": "pnpm reset:all && pnpm install",
     "pre-publish": "npm run build && npm run test",
+    "ncu": "find . -name 'node_modules' -prune -o -name 'package.json' -execdir ncu -u ';'",
     "ci:version": "pnpm changeset version && pnpm --filter \"@wbe/*\" install --lockfile-only",
     "ci:publish": "pnpm build && pnpm changeset publish"
   },
   "devDependencies": {
-    "@changesets/cli": "^2.27.7",
-    "@size-limit/esbuild-why": "^9.0.0",
-    "@size-limit/preset-small-lib": "^8.2.6",
-    "@types/node": "^20.16.0",
-    "jsdom": "^22.1.0",
-    "prettier": "^2.8.8",
-    "size-limit": "^8.2.6",
-    "turbo": "^1.13.4",
+    "@changesets/cli": "^2.27.8",
+    "@size-limit/esbuild-why": "^11.1.4",
+    "@size-limit/preset-small-lib": "^11.1.4",
+    "@types/node": "^22.5.4",
+    "jsdom": "^25.0.0",
+    "prettier": "^3.3.3",
+    "size-limit": "^11.1.4",
+    "turbo": "^2.1.1",
     "typescript": "^5.5.4",
-    "vite": "^4.5.3",
-    "vitest": "^0.31.4"
+    "vite": "^5.4.3",
+    "vitest": "^2.0.5"
   },
+  "packageManager": "pnpm@9.7.0",
   "prettier": {
     "semi": false,
     "printWidth": 100
